kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contoso-website
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: contoso.!DNS!
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: contoso-website
                port:
                  number: 80
